--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "bootstrap": "^4.0.0-beta",
+        "cleave.js": "^1.0.1",
+        "dropzone": "^5.1.1",
         "font-awesome": "^4.7.0"
     }
 }
